Added content to index.html

--- a/index.html
+++ b/index.html
@@ -3,4 +3,26 @@ layout: home
 author_profile: true
 ---
 
-This is the main page of my website!
+<p>
+    Welcome to the personal website of Bobby R. Bruce.
+</p>
+
+<p>
+    Bobby R. Bruce is a Postdoctoral Scholar at UC Davis.
+</p>
+
+<p>
+    On this website you may view Bobby's
+    <a href="/biography.html">biography</a>, see a list of his
+    <a href="/publications.html">papers and others publications</a>, and keep
+    up-to-date with his <a href="/blog.html">blog</a> (which he makes no
+    promises of updating regularly, or at all).
+</p>
+
+<p>
+    <b>
+        Any and all opinions expressed within, or referenced from, this website
+        do not reflect those of any institutions, organizations, or persons
+        associated with Bobby R. Bruce.
+    </b>
+</p>
