Fixed grammar in the index page disclaimer

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ author_profile: true
 
 <p>
     <b>
-        Any and all opinions expressed within, or referenced from, this website
+        Any and all opinions expressed within or referenced from this website
         do not reflect those of any institutions, organizations, or persons
         associated with Bobby R. Bruce.
     </b>
