Added Bio Photo to the index page

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@ author_profile: true
     promises of updating regularly, or at all).
 </p>
 
+<img src="/assets/images/bio-photo.jpg"
+     alt="My Profile Picture (taken 2020)"
+     style="width: 60%; height:60%"
+/>
+
 <p>
     <b>
         Any and all opinions expressed within or referenced from this website
