Added advert for GI@ICSE 2021

--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@ author_profile: true
     promises of updating regularly, or at all).
 </p>
 
+<p>
+    <b>
+        Please consider submitting to the
+        <a href="http://geneticimprovementofsoftware.com/gi2021icse.html">
+        Genetic Improvement Workshop @ICSE 2021</a>
+    </b>
+</p>
+
 <img src="/assets/images/bio-photo.jpg"
      alt="My Profile Picture (taken 2020)"
      style="width: 60%; height:60%"
