Updated position to Project Scientist

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ author_profile: true
 </p>
 
 <p>
-    Bobby R. Bruce is a Postdoctoral Scholar at UC Davis.
+    Bobby R. Bruce is a Project Scientist at UC Davis.
 </p>
 
 <p>
