--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ author_profile: true
 </p>
 
 
-<img src="/assets/images/bio-photo.jpg"
+<img src="/assets/images/bio-photo.webp"
      alt="My Profile Picture (taken 2020)"
      style="width: 60%; height:60%"
 />
