Remove html file extensions m#   (use "git push" to publish your local commits)

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@ author_profile: true
 
 <p>
     On this website you may view Bobby's
-    <a href="/biography.html">biography</a>, see a list of his
-    <a href="/publications.html">papers and others publications</a>, and keep
-    up-to-date with his <a href="/blog.html">blog</a> (which he makes no
+    <a href="/biography">biography</a>, see a list of his
+    <a href="/publications">papers and others publications</a>, and keep
+    up-to-date with his <a href="/blog">blog</a> (which he makes no
     promises of updating regularly, or at all).
 </p>
 
