--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ author_profile: true
 </p>
 
 
-<img src="/assets/images/bio-photo.webp"
-     alt="My Profile Picture (taken 2020)"
+<img src="/assets/images/bio-photo-2024.png"
+     alt="My Profile Picture (taken 2022)"
      style="width: 60%; height:60%"
 />
 
